Cycles allows to select un supported GPUs for OpenCL #50268

Closed
opened 2016-12-17 19:02:59 +01:00 by Bilal Saeed · 15 comments

System Information
macOS Sierra and Intel Iris 6100

Blender Version
Broken: 2.78

Short description of error
I tried to render by selecting OpenCL on user preferences and selected GPU compute accordingly in render options. But Blender halts by showing Loading render Kernels

Exact steps for others to reproduce the error

  • Go to user preferences select OpenCL as for render.

  • Select GPU compute in render options.

  • Press shift + z to enter in render mode.

**System Information** macOS Sierra and Intel Iris 6100 **Blender Version** Broken: 2.78 **Short description of error** I tried to render by selecting OpenCL on user preferences and selected GPU compute accordingly in render options. But Blender halts by showing Loading render Kernels **Exact steps for others to reproduce the error** - >Go to user preferences select OpenCL as for render. - >Select GPU compute in render options. - >Press shift + z to enter in render mode.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bilalsaeedhb

Added subscriber: @bilalsaeedhb

blender/blender-file#50330 was marked as duplicate of this issue

blender/blender-file#50330 was marked as duplicate of this issue
Member

Added subscribers: @mauriceconrad, @Blendify, @mont29

Added subscribers: @mauriceconrad, @Blendify, @mont29
Aaron Carlisle changed title from Unable to render on OpenCL to Cycles allows to select un supported GPUs for OpenCL 2016-12-27 18:35:28 +01:00
Member

Added subscribers: @Sergey, @MaiLavelle

Added subscribers: @Sergey, @MaiLavelle

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Thomas Dinges self-assigned this 2016-12-27 20:14:21 +01:00

Intel GPUs are not officially supported yet for Cycles rendering. This might change in the future, with various split kernel improvements, but for now it's a known limitation.

Intel GPUs are not officially supported yet for Cycles rendering. This might change in the future, with various split kernel improvements, but for now it's a known limitation.
Member

@ThomasDinges I do not think that the Intel GPU should show up? Or is there no way of determining this?

@ThomasDinges I do not think that the Intel GPU should show up? Or is there no way of determining this?

We explicitly white list certain OpenCL configurations, not sure we differentiate correctly on OSX though.

We explicitly white list certain OpenCL configurations, not sure we differentiate correctly on OSX though.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

We don't officially support Iris due to compiler limitations. We should only white-list AMD cards by default on all platforms. It should be possible to get device name on platform Apple and black-list Iris in ccl::OpenCLInfo::device_supported().

Wouldn't want to blindly apply changes without test here. So unless someone handles this will do it when i'm back to studio.

We don't officially support Iris due to compiler limitations. We should only white-list AMD cards by default on all platforms. It should be possible to get device name on platform Apple and black-list Iris in `ccl::OpenCLInfo::device_supported()`. Wouldn't want to blindly apply changes without test here. So unless someone handles this will do it when i'm back to studio.

This issue was referenced by blender/cycles@6bff88d22e

This issue was referenced by blender/cycles@6bff88d22eedf90701d42e1869a4be6f0a6ca666

This issue was referenced by 3c4df13924

This issue was referenced by 3c4df13924a86355a16774e44b6c5e126001c979

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50268
No description provided.