Fix T50268: Cycles allows to select un supported GPUs for OpenCL